--- a/src/assets/styles/breakpoints/_base.scss
+++ b/src/assets/styles/breakpoints/_base.scss
@@ -6,17 +6,13 @@ html {
 }
 
 body {
-  background-color: white;
-  // width: 100%;
+  background-color: #c3c6d32c;
   height: 100%;
-  // display: flex;
-  // justify-content: center;
   margin: 0;
 }
 
 #root {
   margin: 0 auto;
-  // width: 100%;
   max-width: 1000px;
   height: 100%;
 }
@@ -30,27 +26,35 @@ main {
 .home {
   width: 100%;
   height: 90%;
-  max-width: 1000px;
   display: flex;
   flex-wrap: wrap;
   .calendar {
     margin-top: 20px;
+    margin-bottom: 20px;
     min-width: 300px;
     &__container {
-      position: relative;
+      // box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+      background-color: white;
+      // position: relative;
     }
   }
-  .todo,  
-  .diary{
-    margin-top: 20px;
+  .schedule,
+  .diary {
+    // margin-top: 20px;
     width: 100%;
     min-width: 300px;
     &__container {
+      // width: 95%;
+      // box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+      background-color: white;
       position: relative;
       min-height: 200px;
       margin: 0 auto;
     }
   }
+  // .diary__container{
+  //   margin-bottom: 20px;
+  // }
 }
 
 .p-calendar {
@@ -58,6 +62,16 @@ main {
   background-color: white;
   width: 100%;
   max-width: 1000px;
+}
+
+.p-diaries {
+  overflow: scroll;
+  height: 100%;
+}
+
+.p-ToDoList {
+  overflow: scroll;
+  height: 100%;
 }
 
 .form {
@@ -71,15 +85,21 @@ main {
 
 .container__header {
   & h2 {
+    font-size: 1.2rem;
     font-weight: 200;
     margin: 0;
+    line-height: 56px;
+    padding-left: 30px;
+    margin: 0 auto;
   }
-  background-color: #3f51b5;
+  // border: 1px solid #3f51b5;
+  background-color: #20295f;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
   color: white;
   display: flex;
   justify-content: space-between;
-  height: 15%;
-  max-height: 40px;
+  height: 56px;
+  // max-height: 40px;
   padding: 0 16px;
   margin: 0;
 }
@@ -108,6 +128,24 @@ main {
 
 .validation {
   height: 20px;
+}
+
+.dialogHeader {
+  display: flex;
+  justify-content: flex-end;
+  min-height: 48px;
+  background-color: #20295f;
+  color: white;
+  align-items: center;
+}
+.empty-item{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  text-align:center;
+  // padding-top: 100px;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 /*********** Module Spacer ***********/
